# django-expiry

./: .gitignore  AUTHORS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.circleci/: config.yml
expiry/: __init__.py  apps.py  middleware.py  rules.py  signals.py
tests/: settings.py  test_django_expiry.py
