[tool.poetry]
name = "django-expiry"
version = "0.2.2"
description = "Expiry rules for Django sessions."
authors = ["Ramon Saraiva <ramonsaraiva@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*"

Django = ">=2.1.2"

[tool.poetry.dev-dependencies]

